2006-08-24 17:45  Thomas Schreck <shrek@xfce.org>

	* Fix typo

2006-08-24 17:36  Thomas Schreck <shrek@xfce.org>

	* Fix mem leak and bug with more cpus

2006-08-23 22:48  Thomas Schreck <shrek@xfce.org>

	* rewrote most of the code
	* added support to change frequency (userspace governor) 
	  and governor (Linux 2.6)

2006-08-10 20:15  Thomas Schreck <shrek@xfce.org>

	* added autogen.sh

2006-07-01 18:00  Thomas Schreck <shrek@xfce.org>

	* initial version