@@ -16,67 +16,18 @@
  *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
+#define BORDER 1
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
 
-#define BORDER 1
-
 #include <libxfcegui4/libxfcegui4.h>
-
 #include "xfce4-cpufreq-plugin.h"
+#ifdef __linux__
 #include "xfce4-cpufreq-linux.h"
+#endif /* __linux__ */
 #include "xfce4-cpufreq-overview.h"
-
-static void
-freq_combo_changed (GtkWidget *combo, guint cpu_number)
-{
-	guint	freq;
-	gchar   *new_freq;
-	CpuInfo *cpu;
-
-	cpu      = g_ptr_array_index (cpuFreq->cpus, cpu_number);
-	new_freq = gtk_combo_box_get_active_text (GTK_COMBO_BOX (combo));
-	freq     = cpufreq_get_normal_freq (new_freq);
-
-	if (g_ascii_strcasecmp (cpu->cur_governor, "userspace") != 0)
-	{
-		xfce_warn ("You could only change CPU frequency, if you use the \"userspace\" governor");
-		g_free (new_freq);
-		return;
-	}
-
-	if (xfce_confirm (_("Are you sure to change the frequency !"), GTK_STOCK_YES, NULL) == FALSE)
-	{
-		g_free (new_freq);
-		return;
-	}
-
-	if (cpufreq_cpu_set_freq (cpu_number, freq) == FALSE)
-		xfce_err (_("It was not possible to change the frequency"));
-
-	g_free (new_freq);
-}
-
-static void
-governor_combo_changed (GtkWidget *combo, guint cpu_number)
-{
-	gchar *new_governor;
-
-	new_governor = gtk_combo_box_get_active_text (GTK_COMBO_BOX (combo));
-
-	if (xfce_confirm (_("Are you sure to change the governor !"), GTK_STOCK_YES, NULL) == FALSE)
-	{
-		g_free (new_governor);
-		return;
-	}
-
-	if (cpufreq_cpu_set_governor (cpu_number, new_governor) == FALSE)
-		xfce_err (_("It was not possible to change the governor"));
-
-	g_free (new_governor);
-}
 
 static void
 cpufreq_overview_add (CpuInfo *cpu, guint cpu_number, GtkWidget *dialog_hbox)
@@ -107,7 +58,11 @@ cpufreq_overview_add (CpuInfo *cpu, guint cpu_number, GtkWidget *dialog_hbox)
 	label = gtk_label_new (_("Scaling driver:"));
 	gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
 
-	text = g_strdup_printf ("<b>%s</b>", cpu->scaling_driver);
+	if (cpu->scaling_driver != NULL)
+		text = g_strdup_printf ("<b>%s</b>", cpu->scaling_driver);
+	else
+		text = g_strdup_printf (_("No scaling driver available"));
+
 	label = gtk_label_new (text);
 	gtk_box_pack_end (GTK_BOX (hbox), label, TRUE, TRUE, 0);
 	gtk_label_set_use_markup (GTK_LABEL (label), TRUE);
@@ -120,52 +75,98 @@ cpufreq_overview_add (CpuInfo *cpu, guint cpu_number, GtkWidget *dialog_hbox)
 	label = gtk_label_new (_("Available frequencies:"));
 	gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
 
-	combo = gtk_combo_box_new_text ();
-	gtk_box_pack_end (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
-	list = g_list_first (cpu->available_freqs);
-	j = 0;
-	while (list)
+	if (cpu->available_freqs != NULL) /* Linux 2.6 with scaling support */
 	{
-		text = cpufreq_get_human_readable_freq (GPOINTER_TO_INT (list->data));
-		if (GPOINTER_TO_INT (list->data) == cpu->cur_freq)
-			i = j;
-		gtk_combo_box_append_text (GTK_COMBO_BOX (combo), text);
+		combo = gtk_combo_box_new_text ();
+		gtk_box_pack_end (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
+		list = g_list_first (cpu->available_freqs);
+		j = 0;
+		while (list)
+		{
+			text = cpufreq_get_human_readable_freq (GPOINTER_TO_INT (list->data));
+			if (GPOINTER_TO_INT (list->data) == cpu->cur_freq)
+				i = j;
+			gtk_combo_box_append_text (GTK_COMBO_BOX (combo), text);
+			g_free (text);
+			list = g_list_next (list);
+			j++;
+		}
+		gtk_combo_box_set_active (GTK_COMBO_BOX (combo), i);
+	}
+	else if (cpu->cur_freq && cpu->min_freq && cpu->max_freq) /* Linux 2.4 with scaling support */
+	{
+		combo = gtk_combo_box_new_text ();
+		gtk_box_pack_end (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
+
+                text = cpufreq_get_human_readable_freq (cpu->cur_freq);
+                gtk_combo_box_append_text (GTK_COMBO_BOX (combo), text);
+                g_free (text);
+		text = cpufreq_get_human_readable_freq (cpu->max_freq);
+                gtk_combo_box_append_text (GTK_COMBO_BOX (combo), text);
+                g_free (text);
+		text = cpufreq_get_human_readable_freq (cpu->min_freq);
+                gtk_combo_box_append_text (GTK_COMBO_BOX (combo), text);
+                g_free (text);
+
+                gtk_combo_box_set_active (GTK_COMBO_BOX (combo), 0);
+	}
+	else /* If there is no scaling support only show the cpu freq */
+	{
+		text = cpufreq_get_human_readable_freq (cpu->cur_freq);
+		text = g_strdup_printf ("<b>%s</b> (current frequency)", text);
+		label = gtk_label_new (text);
+		gtk_box_pack_end (GTK_BOX (hbox), label, TRUE, TRUE, 0);
+		gtk_label_set_use_markup (GTK_LABEL (label), TRUE);
 		g_free (text);
-		list = g_list_next (list);
-		j++;
 	}
-	gtk_combo_box_set_active (GTK_COMBO_BOX (combo), i);
-	g_signal_connect (G_OBJECT (combo), "changed", G_CALLBACK (freq_combo_changed), cpu_number);
 
+#ifdef __linux__
 	/* display list of available governors */
-	hbox = gtk_hbox_new (FALSE, BORDER);
-	gtk_box_pack_start (GTK_BOX (dialog_vbox), hbox, FALSE, FALSE, 0);
-
-	label = gtk_label_new (_("Available governors:"));\
-	gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
-
-	combo = gtk_combo_box_new_text ();
-	gtk_box_pack_end (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
-	list = g_list_first (cpu->available_governors);
-	j = 0;
-	while (list)
+	if (cpu->available_governors != NULL) /* Linux 2.6 and cpu scaling support */
 	{
-		gtk_combo_box_append_text (GTK_COMBO_BOX (combo), list->data);
-		if (g_ascii_strcasecmp (list->data, cpu->cur_governor) == 0)
-			i = j;
-		list = g_list_next (list);
-		j++;
-	}
+		hbox = gtk_hbox_new (FALSE, BORDER);
+		gtk_box_pack_start (GTK_BOX (dialog_vbox), hbox, FALSE, FALSE, 0);
 
-	gtk_combo_box_set_active (GTK_COMBO_BOX (combo), i);
-	g_signal_connect (G_OBJECT (combo), "changed", G_CALLBACK (governor_combo_changed), cpu_number);
+		label = gtk_label_new (_("Available governors:"));\
+		gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
+
+		combo = gtk_combo_box_new_text ();
+		gtk_box_pack_end (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
+		list = g_list_first (cpu->available_governors);
+		j = 0;
+		while (list)
+		{
+			gtk_combo_box_append_text (GTK_COMBO_BOX (combo), list->data);
+			if (g_ascii_strcasecmp (list->data, cpu->cur_governor) == 0)
+				i = j;
+			list = g_list_next (list);
+			j++;
+		}
+
+		gtk_combo_box_set_active (GTK_COMBO_BOX (combo), i);
+	}
+	else if (cpu->cur_governor != NULL) /* Linux 2.4 and cpu scaling support */
+	{
+		hbox = gtk_hbox_new (FALSE, BORDER);
+		gtk_box_pack_start (GTK_BOX (dialog_vbox), hbox, FALSE, FALSE, 0);
+
+		label = gtk_label_new (_("Current governor:"));
+		gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
+
+		text = g_strdup_printf ("<b>%s</b>", cpu->cur_governor);
+		label = gtk_label_new (text);
+		gtk_box_pack_end (GTK_BOX (hbox), label, TRUE, TRUE, 0);
+		gtk_label_set_use_markup (GTK_LABEL (label), TRUE);
+		g_free (text);
+	}
+	/* If there is no scaling support, do not display governor combo */
+#endif /* __linux__ */
 }
 
 static void
-cpufreq_overview_response (GtkWidget *dialog, gint response, CpuFreqPlugin *cpuFreq)
+cpufreq_overview_response (GtkWidget *dialog, gint response, gpointer data)
 {
 	g_object_set_data (G_OBJECT (cpuFreq->plugin), "overview", NULL);
-
 	gtk_widget_destroy (dialog);
 }
 
@@ -216,7 +217,7 @@ cpufreq_overview (GtkWidget *widget, GdkEventButton *ev, CpuFreqPlugin *cpuFreq)
 		}
 	}
 
-	g_signal_connect (G_OBJECT (dialog), "response", G_CALLBACK (cpufreq_overview_response), cpuFreq);
+	g_signal_connect (G_OBJECT (dialog), "response", G_CALLBACK (cpufreq_overview_response), NULL);
 
 	gtk_widget_show_all (dialog);
 
